--- a/ejercicio.html
+++ b/ejercicio.html
@@ -11,16 +11,8 @@
 
 <body>
     <div>
-        <center>
-        <img src="godzilla.webp" width="420"  height="250" />
-    </center>
+        <header>Hola</header>
     </div>
-    <div>
-        <center>
-        <header>
-            <h2>GodzillavsKong</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ut vitae ipsam officiis temporibus accusantium facere mollitia rerum tempora omnis, animi facilis et aspernatur debitis! Cupiditate culpa sint perspiciatis omnis.</p>
-        </header>
     </center>
     </div>
     <div>
