--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-    <h>1ESTA ES MI PAGINA DE DOCKER .</h1>
+    <h1>1ESTA ES MI PAGINA DE DOCKER .</h1>
+    <h2>ESTE ES EL SUBTITULO</h2>
     <p>Rene Garcia.</p>
 
 </body>
